--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,6 @@
     box-sizing: border-box;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
-
-    background: #aa8888;
 }
 
 :root {
@@ -27,3 +25,64 @@
     --bodyColor: rgb(240, 240, 246);
     --cardBG: rgb(225, 225, 235);
 }
+
+a {
+    text-decoration: none;
+}
+
+li {
+    list-style-type: none;
+}
+
+.section {
+    padding: 4rem 0 2rem;
+}
+
+.container { 
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+}
+
+.icon {
+    font-size: 2rem;
+    cursor: pointer;
+}
+
+.flex {
+    display: flex;
+    align-items: center;
+}
+
+.grid {
+    display: grid;
+    align-items: center;
+}
+
+.btn {
+    padding: .6rem 1.5rem;
+    background: var(--gradientColor);
+    border-radius: 3rem;
+    outline: none;
+    border: none;
+}
+
+.btn a {
+    color: var(--whiteColor);
+    font-weight: 500;
+}
+
+.btn:hover {
+    background: var(--SecondaryColor);
+}
+
+img, video {
+    width: 100%;
+    height: auto;
+}
+
+body {
+    background: var(--bodyColor);
+}
+
+
+
