--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -78,4 +78,4 @@
 }
 .header .toggleNavbar .icon:hover {
   color: var(--SecondaryColor);
-}/*# sourceMappingURL=navbar.css.map */
+}/*# sourceMappingURL=Navbar.css.map */
