--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -23,7 +23,7 @@
         transform: translateY(5px);
     }
 
-    @media screen and (max-width: 550px) {
+    @media screen and (max-width: 769px) {
         .navBar {
             position: absolute;
             background: var(--whiteColorDeam);
@@ -87,5 +87,64 @@
                 color: var(--SecondaryColor);
             }
         }
+    }
+}
+
+@media screen and (min-width: 769px) {
+    .toggleNavbar,
+    .closeNavbar {
+        display: none;
+    }
+
+    .header {
+        padding: 1.5rem 2rem;
+
+        .navBar {
+            .navList {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: row;
+            }
+
+            .navItem {
+                .navLink {
+                    color: var(--textColor);
+                    padding: 0 0.45rem;
+                    font-size: 0.9rem;
+                    font-weight: 500;
+
+                    &:hover {
+                        color: var(--PrimaryColor);
+                    }
+                }
+            }
+
+            .btn {
+                margin-left: 1rem;
+                a {
+                    color: var(--whiteColor);
+                    font-weight: 500;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 960px) {
+    .header {
+        .navBar {
+            .navItem {
+                .navLink {
+                    padding: 0 0.7rem;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 1240px) {
+    .header {
+        padding: 1rem 8.5rem;
     }
 }
