--- a/src/Components/Main/Main.scss
+++ b/src/Components/Main/Main.scss
@@ -24,7 +24,7 @@
     }
 
     .setContent {
-        justify-content: center;
+        //justify-content: center;
         gap: 1.5rem;
 
         .singleDestination {
@@ -137,6 +137,34 @@
                     }
                 }
             }
+        }
+    }
+}
+
+@media screen and (min-width: 500px) {
+    .title {
+        font-size: 1.5rem;
+        &::after {
+            width: 155px !important;
+        }
+    }
+
+    .setContent {
+        grid-template-columns: repeat(2, 1fr);
+
+        .singleDestination {
+            height: auto;
+        }
+    }
+}
+
+@media screen and (min-width: 840px) {
+
+    .setContent {
+        grid-template-columns: repeat(3, 1fr);
+
+        .singleDestination {
+            height: auto;
         }
     }
 }
