--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -53,7 +53,6 @@
                     font-size: 13px;
                     font-weight: 400;
                     color: var(--whiteColor);
-
                 }
 
                 h2{
@@ -201,6 +200,111 @@
                 small {
                     font-size: 10px;
                     color:var(--whiteColor)
+                }
+            }
+        }
+    }
+}
+
+
+@media screen and (min-width: 500px) {
+    .footer {
+        .secContent {
+            .footerCard {
+                .footerLinks {
+                    grid-template-columns: repeat(3, 1fr);
+                    padding-bottom: 1rem;
+                }
+
+                .footerDiv {
+                    justify-content: space-between;
+                    flex-direction: row;
+
+                    small {
+                        font-size:14px;
+                        color: var(--whiteColor);
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+@media screen and (min-width: 660px) {
+    .footer {
+        .secContent {
+            .contactDiv {
+                flex-direction: row;
+                justify-content:  space-between;
+
+
+                .inputDiv {
+                    width: max-content;
+                    flex-direction: row;
+                    justify-content: flex-start;
+    
+                    input {
+                        width: 90%;
+                    }
+
+                    .btn {
+                        width: max-content;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+
+@media screen and (min-width: 840px) {
+    .footer {
+        padding: 5rem 0;
+        .secContent {
+            .footerCard {
+                flex-direction: row;
+
+                .footerLinks {
+                    grid-template-columns: repeat(3, 1fr);
+                    padding-bottom: 1rem;
+                }
+            }
+        }
+    }
+}
+
+
+@media screen and (min-width: 1024px) {
+    .footer {
+        .secContent {
+            .footerCard {
+                padding: 3rem 1rem;
+
+                .footerIntro {
+                    .footerParagraph {
+                        font-size: 15px;
+                        color: var(--textColor);
+                    }
+
+                    .footerSocials {
+                        column-gap: .5rem;
+
+                        .icon {
+                            color: var(--textColor);
+                            font-size: 25px;
+
+                            &:hover {
+                                color: var(--PrimaryColor);
+                            }
+                        }
+                    }
+                }
+
+                .footerLinks {
+                    font-size: 16px;
+                    padding: 5px 0;
                 }
             }
         }
