--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -21,7 +21,6 @@
   z-index: -1;
 }
 .main .setContent {
-  justify-content: center;
   gap: 1.5rem;
 }
 .main .setContent .singleDestination {
@@ -117,4 +116,27 @@
 .main .setContent .singleDestination .cardInfo .btn .icon {
   align-self: center;
   font-size: 18px;
+}
+
+@media screen and (min-width: 500px) {
+  .title {
+    font-size: 1.5rem;
+  }
+  .title::after {
+    width: 155px !important;
+  }
+  .setContent {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .setContent .singleDestination {
+    height: auto;
+  }
+}
+@media screen and (min-width: 840px) {
+  .setContent {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .setContent .singleDestination {
+    height: auto;
+  }
 }/*# sourceMappingURL=Main.css.map */
